--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "livePreview.defaultPreviewPath": "/Palindrome/Palindrome.html"
+    "livePreview.defaultPreviewPath": "/RomanNumeralConverter/RomanNumeralConverter.html"
 }
